# flow

./: .gitignore  README.md  campbell_flow.py  general_flow.py  pyproject.toml  transformer.py
scripts/: analyze_entropy_evolution.py  analyze_gat_perplexity.py  evaluate_gat_perplexity.py  evaluate_hybrid_tau.py  evaluate_model.py  evaluate_perplexity.py  plot_all_perplexity.py  plot_usual_flow_perplexity.py  test_hybrid_sampler.py  train_camp_tinystories.py  train_camp_tinystories_distributed.py  train_gat_tinystories.py  train_tinystories.py
src/flow/: campbell_flow.py  empirical_dfm.py  eval.py  general_flow.py  hybrid_flow.py  transformer.py  utils.py
