[project]
name = "flow"
version = "0.1.0"
description = "Project for discrete flow matching on TinyStories"
requires-python = ">=3.11, <3.12"

dependencies = [
    "torch",
    "transformers",
    "datasets",
    "tqdm",
    "transformers",
    "numpy<2",
    "einops>=0.8.1",
    "matplotlib>=3.10.7",
    "pip>=25.3",
    "ipykernel>=7.1.0",
    "wandb>=0.22.3",
    "nvitop>=1.5.3",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.8",
]
